--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,4 +32,4 @@ services:
     ports:
       - "3000:3000"
     environment:
-      - NEXT_PUBLIC_API_URL=http://localhost:8000
+      - API_URL=http://backend:8000
