--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,8 @@ services:
               #   - /dev/dri
     volumes:
       - ./backend:/app
+      - ./docker_data/cache:/root/.cache
+      - ./docker_data/u2net:/root/.u2net
     environment:
       - PYTHONUNBUFFERED=1
 
